Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/migrador-prd/migrador-prd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: migration-prd-ingress
  namespace: migration-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: suporte
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  tls:
  - hosts:
    - migration.pixeon.cloud
    secretName: migration-prd-secret
  rules:
  - host: migration.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: migration-prd-app
          servicePort: 8080
